visibility transition fix

--- a/style.scss
+++ b/style.scss
@@ -3750,7 +3750,6 @@ nav {
 }
 
 .rev-loader-wtx-loader-anim {
-  visibility: visible;
   z-index: 999;
   animation: LoaderWTXReverse 1200ms cubic-bezier(0.65, 0, 0.35, 1);
   animation-fill-mode: forwards !important;
